--- a/public/index.html
+++ b/public/index.html
@@ -354,17 +354,17 @@
               <option value="">Choose</option>
               <optgroup label="Faculty of Science and Engineering">
                 <option value="Computer Science and Engineering">CSE</option>
-                <option value="Electrical and Electronics Engineering">EEE</option>
+                <!-- <option value="Electrical and Electronics Engineering">EEE</option>
                 <option value="Civil Engineering">CE</option>
-                <option value="Mathematics">Math</option>
+                <option value="Mathematics">Math</option> -->
               </optgroup>
-              <optgroup label="Faculty of Arts and Law">
+              <!-- <optgroup label="Faculty of Arts and Law">
                 <option value="English">English</option>
                 <option value="Law">Law</option>
               </optgroup>
               <optgroup label="Faculty of Business Administration">
                 <option value="Business Administration">BA</option>
-              </optgroup>
+              </optgroup> -->
 
             </select>
           </div>
