--- a/public/index.html
+++ b/public/index.html
@@ -206,7 +206,7 @@
           </div>
           <div class="form-group mb-2">
             <label for="name">Student Name:</label>
-            <input maxlength="127" type="text" placeholder="Enter your name" id="student_name" name="student_name"
+            <input maxlength="127" type="text" placeholder="Enter your Name" id="student_name" name="student_name"
               class="form-control form-control-sm" required />
 
           </div>
