--- a/public/index.html
+++ b/public/index.html
@@ -533,7 +533,7 @@
 
       </div>
 
-      <div class="text-center pt-5">Created with ❤️ by <a href="facebook.com/abid.shahriar.73">Shahriar Zaman Abid</a> & <a href="facebook.com/mazumder.sh">Shazzad Hossain
+      <div class="text-center pt-5">Created with ❤️ by <a target="_blank" href="//facebook.com/abid.shahriar.73">Shahriar Zaman Abid</a> & <a target="_blank" href="//facebook.com/mazumder.sh">Shazzad Hossain
           Mazumder</a></div>
       <div class="text-center">©️ All Rights Reserved by Dept. of CSE, Feni University</div>
 
