--- a/public/index.html
+++ b/public/index.html
@@ -257,6 +257,13 @@
               <option value="" disabled selected>Choose</option>
 
               <optgroup label="Bi-Semester">
+                <option value="40th">40th</option>
+                <option value="39th">39th</option>
+                <option value="38th">38th</option>
+                <option value="37th">37th</option>
+                <option value="36th">36th</option>
+                <option value="35th">35th</option>
+                <option value="34th">34th</option>
                 <option value="33rd">33rd</option>
                 <option value="32nd">32nd</option>
                 <option value="31st">31st</option>
